--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.css"/>
 
 	<!--MIS ESTILOS -->
-	<link rel='stylesheet' href='assets/css/index.css'/>
+	<link rel='stylesheet' href='assets/css/main.css'/>
 </head>
 
 <body>
@@ -236,7 +236,7 @@
 
 	<!--MIS SCRIPTS-->
 	<script type='text/javascript' src='assets/js/dataTable-init.js'></script>
-	<script type='text/javascript' src='assets/js/index.js'></script>
+	<script type='text/javascript' src='assets/js/main.js'></script>
 
 </body>
 </html>
