--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JD Group</title>
-	<link rel="stylesheet" href="assets/css/login.css">
+	<link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
 
@@ -29,7 +29,7 @@
 
 	</div>
 
-	<script type="text/javascript" src="assets/js/login.js"></script>
+	<script type="text/javascript" src="assets/js/index.js"></script>
 	
 </body>
 </html>
