--- a/formato.html
+++ b/formato.html
@@ -19,7 +19,7 @@
     <div class='formato-contenedor-encabezado' >
         <img  class='formato-logo' src='assets/img/logo_horizontal.png' alt=''>
         <h1 class='formato-h1'>Módulo de Acciones Correctivas</h1>
-        <img class ='formato-refrescar' src='assets/img/Refrescar1.png' alt='' id='formato-btn-refrescar'>
+        <img class ='formato-refrescar' src='assets/img/Back.png' alt='' id='formato-btn-back'>
     </div>
 
     <div class='formato-contenedor-principal'>
@@ -289,6 +289,7 @@
 
 <!--MIS SCRIPTS-->
 <script type='text/javascript' src='assets/js/dataTable-init.js'></script>
+<script type='text/javascript' src='assets/js/formato.js'></script>
 
 </body>
 </html>
