--- a/main.html
+++ b/main.html
@@ -25,8 +25,8 @@
 			<h1 class='index-h1'>Módulo de Acciones Correctivas</h1>
 			<div class='index-contenedor-botones-encabezado'>
 				<input type='button' id='index-btn-crear' value='Crear Acción Correctiva'>
-				<input type='button' id='index-btn-reportes' value = 'Reportes'>
-				<input type='button' id='index-btn-exportar' value = 'Exportar a Excel'>
+				<input type='button' id='index-btn-reportes' value = 'Reportes' hidden>
+				<input type='button' id='index-btn-exportar' value = 'Exportar a Excel' hidden>
 				<img class ='index-refrescar' src='assets/img/Refrescar1.png' alt='' id='index-btn-refrescar'>
 			</div>
 
