--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<div class="login-contenedor" >
 
-		<label class= "login-titulo">Módulo de Acciones Correctivas</label>
+		<label class= "login-titulo">Módulo de Recorridos 9s</label>
 
 		<form action="" id="miForm" class="login-formulario">
 			<img class = "login-logo" src="assets/img/logo_horizontal.png" alt="">
