--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'> 
 	
-	<title>Acciones Correctivas</title>
+	<title>Recorridos 9s</title>
 
 	<!-- DATA TABLE -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.2/css/jquery.dataTables.css"/>
@@ -22,7 +22,7 @@
 		<div class='index-contenedor-encabezado' >
 
 			<img  class='index-logo' src='assets/img/logo_horizontal.png' alt=''>
-			<h1 class='index-h1'>Módulo de Acciones Correctivas</h1>
+			<h1 class='index-h1'>RECORRIDOS 9s</h1>
 			<div class='index-contenedor-botones-encabezado'>
 				<input type='button' id='index-btn-crear' value='Crear Acción Correctiva'>
 				<input type='button' id='index-btn-reportes' value = 'Reportes' hidden>
@@ -40,6 +40,7 @@
 					<option></option>
 					<option>FUTURA INDUSTRIAL S.A. DE C.V.</option>
 					<option>SCHLAGE DE MEXICO SA DE CV</option>
+					<option>AVAILMED SA DE CV</option>
 				</select>
 
 				<label for='index-cbx-departamento'>Departamento:</label>
@@ -47,6 +48,8 @@
 					<option></option>
 					<option>CALIDAD</option>
 					<option>REVISION</option>
+					<option>IMPORTACION</option>
+					<option>EXPORTACION</option>
 				</select>
 
 			</div>
@@ -128,6 +131,57 @@
 						<td>2021-08-15</td>
 						<td>2021-08-31</td>
 						<td>SOUTHWEST FABRICATORS S DE RL DE CV</td>
+						<td>PRODUCTO NO CONFORME</td>
+						<td>INTERNA</td>
+						<td>0.00</td>
+						<td>EXPORTACION</td>
+						<td>ADRIANA SALINAS</td>
+						<td>EN PROCESO</td>
+					</tr>
+
+					<tr>
+						<td class='index-grid-icono'>2</td>
+						<td><img class='index-grid-icono' src='assets/img/attach.png' alt='' id="Attach-AC-0221"></td>
+						<td><img class='index-grid-icono' src='assets/img/pencil.png' alt=''></td>
+						<td><img class='index-grid-icono' src='assets/img/format.png' alt=''></td>
+						<td>AC-0221</td>
+						<td>2021-08-15</td>
+						<td>2021-08-31</td>
+						<td>SOUTHWEST FABRICATORS S DE RL DE CV</td>
+						<td>PRODUCTO NO CONFORME</td>
+						<td>INTERNA</td>
+						<td>0.00</td>
+						<td>EXPORTACION</td>
+						<td>ADRIANA SALINAS</td>
+						<td>EN PROCESO</td>
+					</tr>
+
+					<tr>
+						<td class='index-grid-icono'>2</td>
+						<td><img class='index-grid-icono' src='assets/img/attach.png' alt='' id="Attach-AC-0221"></td>
+						<td><img class='index-grid-icono' src='assets/img/pencil.png' alt=''></td>
+						<td><img class='index-grid-icono' src='assets/img/format.png' alt=''></td>
+						<td>AC-0221</td>
+						<td>2021-08-15</td>
+						<td>2021-08-31</td>
+						<td>INDUSTRIAS HUNTER S DE RL DE CV</td>
+						<td>PRODUCTO NO CONFORME</td>
+						<td>INTERNA</td>
+						<td>0.00</td>
+						<td>EXPORTACION</td>
+						<td>ADRIANA SALINAS</td>
+						<td>EN PROCESO</td>
+					</tr>
+
+					<tr>
+						<td class='index-grid-icono'>2</td>
+						<td><img class='index-grid-icono' src='assets/img/attach.png' alt='' id="Attach-AC-0221"></td>
+						<td><img class='index-grid-icono' src='assets/img/pencil.png' alt=''></td>
+						<td><img class='index-grid-icono' src='assets/img/format.png' alt=''></td>
+						<td>AC-0221</td>
+						<td>2021-08-15</td>
+						<td>2021-08-31</td>
+						<td>AGENCIA ADUANAL JORGE DIAZ S DE CV</td>
 						<td>PRODUCTO NO CONFORME</td>
 						<td>INTERNA</td>
 						<td>0.00</td>
